# bootcamp

./: .gitignore  main.py  pyproject.toml
basics/ex-basics-1/: main.py  pyproject.toml
basics/ex-basics-2/: README.md  pyproject.toml
basics/ex-basics-3/kanan_hello/: __init__.py  main.py
bootcamp-main/: Readme.md  example.db
bootcamp-main/basics/ex-basics-3/: pyproject.toml
bootcamp-main/basics/ex-basics-3/kanan_hello/: cli.py
bootcamp-main/dataflow-framework/abstraction_level_1/: input.txt  process.py
bootcamp-main/dataflow-framework/abstraction_level_2/: README.md  cli.py  core.py  pyproject.toml
bootcamp-main/dataflow-framework/abstraction_level_3/: cli.py  core.py  main.py  pipeline.py  requirements.txt
bootcamp-main/dataflow-framework/abstraction_level_4/: core.py
bootcamp-main/dataflow-framework/abstraction_level_6/: main.py  processor_types.py
bootcamp-main/dataflow-framework/abstraction_level_8/: Readme.md
bootcamp-main/doctools/: README.md  api_reference.md  change_log.md  daily_log.md
bootcamp-main/doctools/architecture_flow/: arhictecture_dig.md
bootcamp-main/figure_extraction/: PMC6267067.xml  config.dev.yml  config.test.yml  figure_query_result.json  pyproject.toml  sample_data.sql
bootcamp-main/figure_extraction/docker/: Dockerfile
bootcamp-main/figure_extraction/src/: __init__.py
bootcamp-main/figure_extraction/src/api/: auth.py  endpoints.py  server.py
bootcamp-main/figure_extraction/src/cli/: commands.py
bootcamp-main/figure_extraction/src/config/: settings.py
bootcamp-main/figure_extraction/src/core/: jobs.py  orchestrator.py
bootcamp-main/figure_extraction/src/storage/: models.py  queries.py
bootcamp-main/figure_extraction/src/watcher/: folder_watcher.py
bootcamp-main/figure_extraction/tests/: test_extraction.py  test_storage.py
bootcamp-main/language-drills/section-4/: README.md
dataflow-framework/: pyproject.toml
dataflow-framework/abstraction_level_0/: output.txt  process.py
dataflow-framework/abstraction_level_2/: pipeline.py  snakecase.txt
dataflow-framework/abstraction_level_3/: pyproject.toml
dataflow-framework/abstraction_level_3/processors/: snake.py
dataflow-framework/abstraction_level_4/: README.md  pipeline.py
dataflow-framework/abstraction_level_4/processors/: fanout_splitter.py  snake.py  upper.py
dataflow-framework/abstraction_level_5/: README.md
dataflow-framework/abstraction_level_6/: .gitignore  README.md  cli.py  config.yaml  input.txt
dataflow-framework/abstraction_level_6/processors/: filters.py  output.py
dataflow-framework/abstraction_level_7/: main.py  pipeline_config.json  result.txt
dataflow-framework/abstraction_level_7/dashboard/: server.py
dataflow-framework/abstraction_level_7/metrics/: metrics_store.py
dataflow-framework/abstraction_level_8/: log_processor_config.json  main.py  pyproject.toml
dataflow-framework/abstraction_level_8/dashboard/: server.py
dataflow-framework/abstraction_level_8/folder_monitor/: file_processor.py
dataflow-framework/abstraction_level_8/metrics/: metrics_store.py
dataflow-framework/abstraction_level_8/pipeline/: pipeline.py
dataflow-framework/abstraction_level_8/processors/: base.py
dataflow-framework/final-project-wrap-up/: Dockerfile.txt  FINAL.md  main.py  pyproject.toml  requirements.txt  run.sh  setup.py
dataflow-framework/final-project-wrap-up/config/: config_loader.py
day_0/: README.md  main.py  pyproject.toml
day_0/kanan_hello/: __init__.py  main.py
day_1/: README.md  pyproject.toml
day_1/docs/: mkdocs.yml
day_1/docs/sequence_flow/: sequence-dig.md  usage.md
day_2/: pyproject.toml
day_2/Section_1_Core_python/exercise_1/: dict_iteration.py  list_copying_pitfall.py  list_operations.py
day_2/Section_1_Core_python/exercise_2/: 3_dict_comp.py  6_list_vs_generator.py  8_conditional_assignment_in_comprehension.py
day_2/Section_1_Core_python/exercise_3/: 4_variable_keyword_args.py  7_keyword_only_args.py  8_function_annotation.py
day_2/section_2_Pythonic_Idioms/: README.md
day_4/abstraction_level_0/: README.md  sample.txt
day_4/abstraction_level_1/: Readme.md  result.txt  result_snake.txt
day_4/abstraction_level_2/: README (1).md
day_4/abstraction_level_3/: Readme.md  input.txt
day_4/abstraction_level_4/: README.md  cli.py  input.txt  main.py  output.txt  pipeline.yaml  processor_types.py  pyproject.toml  sample_config.json  sample_data.txt  test_stream_processing.py
day_4/abstraction_level_4/config/: __init__.py  (+1 more)
day_4/abstraction_level_5/: main.py  pyproject.toml
day_4/abstraction_level_6/: output.txt  pyproject.toml  requirements.txt  router.py
day_4/abstraction_level_7/: README.md  input.txt  pyproject.toml
day_4/final_wrapup/: Makefile.txt  README.md  example_usage.py  generate_sample_logs.py  pyproject.toml
doctools/: cli_commands.md  contributing.md  design_doc.md  index.md  installation.md  license.md  markdown-cheatsheet.md
figure_extraction/: config.prod.yml  duckdb_schema.sql  main.py  pubtator_response.json  query_duckdb.py  schema.sql
figure_extraction/docker/: docker-compose.yml
figure_extraction/docs/: Design_document.md  deployment-diagram.mermaid  implementation.md  implementation_testing_plan.md  operationalization.md
figure_extraction/tests/: test_api.py  test_entity.py
language-drills/section-1/: README.md
language-drills/section-3/: README.md
language-drills/section-7/: README.md
persistence_drills/: README.md  pyproject.toml
persistence_drills/Basic_Python_Persistence/: main.py
persistence_drills/level_up_drills/: Readme.md  test.db
persistence_drills/sqlite_basics/: main.py  pyproject.toml
persistence_drills/sqlite_system_prepration/: Readme.md  example.db  generate_insert.py  inserts.sql
persistence_drills/sqlite_transactions/: main.py  pyproject.toml
python_bootcamp/section_5_Standard_Library_Mastery/: README.md
python_bootcamp/section_6_Data_Validation_and_Code_Clarity/: README.md
python_dockertest/: main.py
watch_dir/unprocessed/: sample_log_0.txt  sample_log_1.txt  sample_log_2.txt  sample_log_3.txt  sample_log_4.txt
(+948 files in other folders)
