[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanan-hello"
version = "0.1.1"
authors = [
    {name = "kanan", email = "kanangulati7@gmail.com"},
]
description = "A simple hello world package with rich formatting"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/gulatikanan/bootcamp/tree/bfaafac4ce4e5e4f3f4feaefd8a32cd2c35c3369/day_0"
