[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanan-hello"
version = "0.3.0"
authors = [
    {name = "kanan", email = "kanangulati7@gmail.com"},
]

description = "A simple Python module that returns a greeting based on the provided name. Uses the rich library for styled text in the terminal and integrates the typer library to convert the module into a command-line interface (CLI)."

readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
kanan-hello = "kanan_hello.cli:main"

[project.urls]
"Homepage" = "https://github.com/gulatikanan/bootcamp/tree/bfaafac4ce4e5e4f3f4feaefd8a32cd2c35c3369/day_0"
