[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yourname-hello"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A simple hello world package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/yourname-hello"
"Bug Tracker" = "https://github.com/yourusername/yourname-hello/issues"