[project]
name = "figure-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "httpx>=0.24.0",
    "pydantic>=1.10.7",
    "sqlalchemy>=2.0.9",
    "duckdb>=0.8.1",
    "typer>=0.9.0",
    "rich>=13.3.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
]

[project.scripts]
paper-extractor = "src.cli.commands:run_cli"

[tool.setuptools]
packages = ["src"]