[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yourname-hello"
version = "0.2.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A simple hello world CLI application"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
yourname-hello = "yourname_hello.cli:main"

[project.urls]
"Homepage" = "https://github.com/gulatikanan/kanan_hello"
"Bug Tracker" = "https://github.com/gulatikanan/kanan_hello/issues"